base_wua/static/src/css/base_wua.css
.o_base_wua_region_view_tree [data-id="name"] {
    width: 60%;
}

.o_base_wua_region_view_tree [data-id="code"] {
    width: 20%;
}

.o_base_wua_region_view_tree [data-id="number_of_states"] {
    width: 20%;
}

.o_base_wua_region_state_county_view_tree [data-id="name"] {
    width: 40%;
}

.o_base_wua_region_state_county_view_tree [data-id="cadastral_code"] {
    width: 15%;
}

.o_base_wua_region_state_county_view_tree [data-id="state_id"] {
    width: 30%;
}

.o_base_wua_region_state_county_view_tree [data-id="cadastral_state_county_code"] {
    width: 15%;
}

.o_base_wua_parcel_view_tree [data-id="name"] {
    width: 14%;
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-field="name"] {
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-id="partner_id"] {
    width: 20%;
}

.o_base_wua_parcel_view_tree [data-id="area_official"] {
    width: 9%;
    text-align: right;
}

.o_base_wua_parcel_view_tree [data-id="rural_location_county"] {
    width: 20%;
}

.o_base_wua_parcel_view_tree [data-id="cadastral_polygon"] {
    width: 6%;
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-field="cadastral_polygon"] {
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-id="cadastral_parcel"] {
    width: 6%;
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-field="cadastral_parcel"] {
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-id="cadastral_reference"] {
    width: 10%;
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-field="cadastral_reference"] {
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-id="leased_parcel"] {
    width: 7%;
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-field="leased_parcel"] {
    text-align: center;
}

.o_base_wua_parcel_view_tree [data-id="number_of_subparcels"] {
    width: 8%;
    text-align: right;
}

.o_base_wua_parcel_subparcel_view_tree_notebook [data-id="pos_str"] {
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree_notebook [data-field="pos_str"] {
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree_notebook [data-id="area_perc"] {
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree_notebook [data-field="area_perc"] {
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree_notebook [data-id="area_official"] {
    width: 11%;
    text-align: right;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="parcel_id"] {
    width: 11%;
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree [data-field="parcel_id"] {
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="partner_id"] {
    width: 20%;
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="subparcel_code"] {
    width: 12%;
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree [data-field="subparcel_code"] {
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="area_perc"] {
    width: 6%;
    text-align: center;
}

.o_base_wua_parcel_subparcel_view_tr0ee [data-id="area_official"] {
    width: 13%;
    text-align: right;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="subparceltype_id"] {
    width: 8%;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="cultivation_id"] {
    width: 8%;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="cultivationvariety_id"] {
    width: 8%;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="irrigationsystem_id"] {
    width: 7%;
}

.o_base_wua_parcel_subparcel_view_tree [data-id="productionmethod_id"] {
    width: 7%;
}
.o_base_wua_partner_view_tree [data-id="partner_code"] {
    width: 6%;
    text-align: center;
}

.o_base_wua_partner_view_tree [data-field="partner_code"] {
    text-align: center;
}

.o_base_wua_partner_view_tree [data-id="display_name"] {
    width: 27%;
}

.o_base_wua_partner_view_tree [data-id="vat"] {
    width: 10%;
    text-align: center;
}

.o_base_wua_partner_view_tree [data-field="vat"] {
    text-align: center;
}

.o_base_wua_partner_view_tree [data-id="phones"] {
    width: 17%;
    text-align: center;
}

.o_base_wua_partner_view_tree [data-field="phones"] {
    text-align: center;
}

.o_base_wua_partner_view_tree [data-id="number_of_votes"] {
    width: 6%;
    text-align: center;
}

.o_base_wua_partner_view_tree [data-field="number_of_votes"] {
    text-align: center;
}

.o_base_wua_partner_view_tree [data-id="parcel_owner_number"] {
    width: 6%;
    text-align: center;
}

.o_base_wua_partner_view_tree [data-field="parcel_owner_number"] {
    text-align: center;
}

.o_base_wua_partner_view_tree [data-id="parcel_owner_area"] {
    width: 10%;
    text-align: right;
}

.o_base_wua_partner_view_tree [data-id="parcel_lessee_number"] {
    width: 6%;
    text-align: center;
}

.o_base_wua_partner_view_tree [data-field="parcel_lessee_number"] {
    text-align: center;
}

.o_base_wua_partner_view_tree [data-id="parcel_lessee_area"] {
    width: 10%;
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-id="partner_id"] {
    width: 32%;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-id="irrigation_partner"] {
     text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-field="irrigation_partner"] {
     text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-id="profile"] {
    width: 17%;
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-field="profile"] {
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-id="ownership_percentage"] {
    width: 17%;
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-id="water_costs_percentage"] {
    width: 17%;
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree_notebook [data-id="other_costs_percentage"] {
    width: 17%;
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="parcel_id"] {
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree [data-field="parcel_id"] {
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="cadastral_reference"] {
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree [data-field="cadastral_reference"] {
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="profile"] {
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree [data-field="profile"] {
    text-align: center;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="area_official"] {
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="area_official_hec"] {
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="ownership_percentage"] {
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="area_official_net"] {
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="water_costs_percentage"] {
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="area_official_water_costs_net"] {
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="other_costs_percentage"] {
    text-align: right;
}

.o_base_wua_parcel_partnerlink_view_tree [data-id="area_official_other_costs_net"] {
    text-align: right;
}

